# quantumsymmetry

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  quantum_state_tree  requirements.txt
.github/workflows/: ci-cd.yml  release.yml  test_and_publish.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/tutorials/: 01_welcome.ipynb  02_theory.ipynb  03_molecular_hamiltonians.ipynb  04_fermionic_operators.ipynb  05_VQE_circuits.ipynb  06_complete_active_space.ipynb  07_bravyi_kitaev.ipynb  08_periodic.ipynb  _build_new_tutorials.py  tree_01_welcome.ipynb  tree_02_ansatz_and_metric.ipynb  tree_03_vqe.ipynb  tree_04_dynamics.ipynb  tree_05_sampling.ipynb  tree_06_dressing.ipynb  tree_07_spin.ipynb
src/: circuits.ipynb
src/quantumsymmetry/: __init__.py  core.py  encoding.py  periodic.py  qiskit_converter.py  quantumsymmetry.py
src/quantumsymmetry/test/: test_.py
src/quantumsymmetry/treecircuit/: __init__.py  affine.py  chemistry.py  circuit.py  dressing.py  dynamics.py  metric.py  minimal_circuit.py  optimize.py  sampling.py  spin.py  tree.py
src/test/: test_UCC_circuit.py  test_dressing.py  test_dressing_bridge.py  test_encoding_apply.py  test_encoding_hamiltonian.py  test_encoding_hamiltonian_quick.py  test_excitation_ops.py  test_fs_sampling.py  test_make_encoding.py  test_periodic_encoding.py  test_reduced_hamiltonian.py  test_spin_adapted.py  test_treecircuit_layout_consistency.py
tests/: test_quantumsymmetry.py
