[tool.poetry]
name = "quantumsymmetry"
version = "0.3.0"
description = "Quantum computing research package"
authors = ["Dario Picozzi"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
numpy = "*"
scipy = "*"
pyscf = "^2.6"
openfermion = "*"
qiskit = ">=1.1"
ipython = "*"
tabulate = "*"
# qiskit-nature is needed only for the qiskit interop (UCC_SAE_circuit, the
# qiskit QubitMapper converter); qiskit-algorithms only for the UCC VQE tests.
# Neither is required by the symmetry-adapted encoding or the tree-circuit
# ansatz, so they are an optional extra: pip install 'quantumsymmetry[qiskit]'.
qiskit_nature = { version = "^0.7", optional = true }
qiskit_algorithms = { version = ">=0.3", optional = true }

[tool.poetry.extras]
qiskit = ["qiskit_nature", "qiskit_algorithms"]

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "master"                           # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
